--- a/templates/UserInfo.html
+++ b/templates/UserInfo.html
@@ -8,7 +8,7 @@
     <div class="form1"><h4>UserName :</h3><input type="text" name="username" id="" value="{{user['username']}}"width="3rem" readonly required></div>
     <div class="form1"><h4>Password :</h3><input type="text" name="password" id="" value="{{user['password']}}"width="3rem" required></div>
     <div class="form1"><h4>Email : </h3><input type="text" name="email" id="" value="{{user['email']}}"width="3rem" readonly required></div>
-    <div class="form1"><h4>Phone : </h3><input type="tel" name="phone" id="" value="{{user['phone']}}"width="3rem" required></div>
+    <div class="form1"><h4>Phone : </h3><input type="tel" name="phone" id="" value="{{user['phone']}}" pattern="[+]{1}[0-9]{11,14}"  width="3rem" required></div>
     <button type="submit" style="background-color: rgb(93, 93, 214);border:0;border-radius: 1rem;padding: 1rem; font-family: Arial, Helvetica, sans-serif;color: aliceblue;">Update</button>
 </form>
 {%endif%}
