--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,27 @@
 <h2 style="text-align: center;">
     Welcome To SaveText.io
 </h2>
-{%else%}
 
-<h2 style="text-align: center;">
-    Welcome To SaveText.io {{user["name"]}}
-</h2>
+
+    
+{%else%}
+    <h2 style="text-align: center;">
+        Welcome To SaveText.io {{user["name"]}}
+    </h2>
+    <br>
+    <br>
+    <div class="note-container">
+   
+        {%for note in notes %}
+           
+            <div class="note-div">
+                <a href="/notes/{{note[0]}}" class="note-div" style="width: 40%;text-align: center;">
+                    <img class="note-icon" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.pngmart.com%2Ffiles%2F23%2FNote-Icon-PNG-Isolated-HD.png&f=1&nofb=1&ipt=0d86c2a4afa6cc5033e87da63b62e65ed2ac3897788342fe03e52f3de2711270&ipo=images" alt="">
+                    <h4>{{note[2]}}</h4>
+                </a>
+            </div>
+        {%endfor%}
+    </div>
 {%endif%}
+
 {%endblock%}
