--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,9 @@
         Welcome To SaveText.io {{user["name"]}}
     </h2>
     <br>
+    <form action="/addnote" style="padding: 0;margin: 1rem;" method="get">
+        <button type="submit" style="padding: 1rem;background-color: rgb(72, 72, 214);color: aliceblue;border: 0;border-radius: 1rem;">Add New Note</button>
+    </form>
     <br>
     <div class="note-container">
    
