--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -47,6 +47,7 @@
             border: 0;
             border-radius: 1rem;
             padding: 1rem;
+            margin: 1rem;
             width: 20%;
             
         }
@@ -103,6 +104,11 @@
                     <a href="/login" >
                         <div style="padding: 15px;text-decoration: none;">
                             Login
+                        </div>
+                    </a>
+                    <a href="/registeruser" >
+                        <div style="padding: 15px;text-decoration: none;">
+                            Register
                         </div>
                     </a>
                     <a href="/about" >
