--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SaveText.io - {{PageName}}</title>
-
-    <link rel="stylesheet" href="{{url_for('static','css/bootstrap.min.css')}}">
-    <link rel="stylesheet" href="{{url_for('static','fontawesome/css/all.min.css')}}">
-    <link rel="stylesheet" href="{{url_for('static','css/templatemo-style.css')}}">
+    
+    <link rel="stylesheet" href="{{url_for('static',filename='css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='fontawesome/css/all.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('static',filename='css/templatemo-style.css')}}">
     <!--<link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
