--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
                 {%for note in notes%}
                 <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                     <figure class="effect-ming tm-video-item">
-                        <img src="img/img-03.jpg" alt="Image" class="img-fluid">
+                        <img src="{{url_for('static',filename='iconnote.jpg')}}" alt="Image" class="img-fluid">
                         <figcaption class="d-flex align-items-center justify-content-center">
                             <h2>{{note[2]}}</h2>
                             <a href="/notes/{{note[0]}}">View more</a>
