--- a/templates/notepage.html
+++ b/templates/notepage.html
@@ -1,68 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SaveText.io - {{PageName}}</title>
-
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="../css/templatemo-style.css">
-    <!--<link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="css/templatemo-style.css">
--->
-   
-</head>
-<body>
-        </div>
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-body-text" viewBox="0 0 16 16">
-                        <path fill-rule="evenodd" d="M0 .5A.5.5 0 0 1 .5 0h4a.5.5 0 0 1 0 1h-4A.5.5 0 0 1 0 .5m0 2A.5.5 0 0 1 .5 2h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m9 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-9 2A.5.5 0 0 1 .5 4h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5m5 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m7 0a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 0 1h-3a.5.5 0 0 1-.5-.5m-12 2A.5.5 0 0 1 .5 6h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5m8 0a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-8 2A.5.5 0 0 1 .5 8h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m7 0a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-7 2a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 0 1h-8a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5"/>
-                    </svg>
-                    SaveText.io
-                </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-1" aria-current="page" href="/">HomePage</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-3" href="/about">About</a>
-                    </li>
-                    {%if isLogged==True%}
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-2" href="/info">{{user["name"]}}</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link nav-link-2" href="/logout">Log Out</a>
-                        </li>
-                    {%else%}
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-2" href="/login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-2" href="/registeruser">Sign Up</a>
-                    </li>
-                    {%endif%}
-
-                </ul>
-                </div>
-            </div>
-        </nav>
-        <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" style='background-image: url("https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwallpaperboat.com%2Fwp-content%2Fuploads%2F2019%2F10%2Froyalty-free-background-image-17.jpg&f=1&nofb=1&ipt=916b703e7b89f88104d4ecf64801b04d77bb64944cc8c8e261139d1193a1cbae&ipo=images");'>
-            <!--<form class="d-flex tm-search-form">
-                <input class="form-control tm-search-input" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success tm-search-btn" type="submit">
-                    <i class="fas fa-search"></i>
-                </button>
-            </form>-->
-        </div>
+{%extends 'layout1.html'%}
+{%block content%}
         <div class="container-fluid tm-container-content tm-mt-60">
 
             <div style="display: flex;flex-direction: row;justify-content: first baseline;">
@@ -87,26 +24,4 @@
                 const id = path.split('/').pop(); // "0" değerini alır
                 document.getElementById('update-button').action ="/update/"+id;
                 </script>
-<div style="padding: 1rem;">
-    <h2>{{note["header"]}}</h2>
-    <div style="margin: 1rem;text-wrap-style: auto;flex-wrap: wrap;word-wrap: break-word;">{{note["body"]}}</div>
-</div>
-<script>
-    $(window).on("load", function() {
-        $('body').addClass('loaded');
-    });
-    </script>
-
-
-
-
-
-<script src="js/plugins.js"></script>
-<script>
-    $(window).on("load", function() {
-        $('body').addClass('loaded');
-    });
-    </script>
-</div>
-</body>
-</html>
+{%endblock%}
