--- a/templates/UserInfo.html
+++ b/templates/UserInfo.html
@@ -7,7 +7,7 @@
     <form style="display: flex;flex-direction: column;align-items: center;justify-content: center;" method="post" action="/info">
         <div class="form1">
             <div >UserID : </div>
-            <input class="form-control tm-search-input" style="margin: 3px;border :1px solid black;border-radius: 12px;" type="text" placeholder="Name" value="{{user['id']}}" name="name" readonly required>
+            <input class="form-control tm-search-input" style="margin: 3px;border :1px solid black;border-radius: 12px;" type="text" placeholder="Name" value="{{user['id']}}" name="id" readonly required>
         </div class="form1">
         <div class="form1">
             <div >Name : </div>
