fixing js bug in the project

--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -68,18 +68,9 @@
         {%block content%}
         {%endblock%}
 
-        <script src="js/plugins.js"></script>
-    <script>
-        $(window).on("load", function() {
-            $('body').addClass('loaded');
-        });
-    </script>
 
-        <script src="{{url_for('static',filename=js/plugins.js")}}></script>
-        <script>
-        $(window).on("load", function() {
-            $('body').addClass('loaded');
-        });
-        </script>
+
+        <script src='{{url_for("static",filename="js/plugins.js")}}'></script>
+
 </body>
 </html>
