--- a/templates/notepage.html
+++ b/templates/notepage.html
@@ -15,7 +15,12 @@
                 </form> 
                 
             </div>
-            
+            <div class="container-fluid tm-container-content tm-mt-60">
+
+                <h2>{{note["header"]}}</h2>
+                <p>{{note["body"]}}</p>
+
+            </div>
             <script>
                 // Mevcut URL'yi al ve formun action özelliğini ayarla
                 document.getElementById('delete-button').action = window.location.pathname;
