--- a/templates/about.html
+++ b/templates/about.html
@@ -10,8 +10,8 @@
             <div class="container-fluid tm-container-small">
                 <div class="row">
                     <div class="col-lg-6 col-md-12 col-12 px-5 mb-5">
-                        <h3 class="tm-text-primary mb-4 tm-footer-title">About SaveText.io</h3>
-                        <p>SaveText.io is a free note saving website that provide security for users</p>
+                        <h3 class="tm-text-primary mb-4 tm-footer-title">About SaveText.net</h3>
+                        <p>SaveText.net is a free note saving website that provide security for users</p>
                     </div>
                     <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                         <h3 class="tm-text-primary mb-4 tm-footer-title">Contact</h3>
@@ -28,11 +28,4 @@
                 </div>
             </div>
         </footer>
-        
-        <script src="js/plugins.js"></script>
-        <script>
-            $(window).on("load", function() {
-                $('body').addClass('loaded');
-            });
-        </script>
     {%endblock%}
