--- a/templates/UpdateNote.html
+++ b/templates/UpdateNote.html
@@ -1,6 +1,10 @@
 {%extends 'layout1.html'%}
 {%block content%}
-
+        <form style="display: flex;flex-direction: column;align-items: center;justify-content: center;" action="/notes/{{note['NoteID']}}" method="get">
+            <button class="btn btn-outline-success tm-search-btn" style="margin: 3px;" type="submit">
+                Go Back
+            </button>
+        </form> 
         <form  method="post" id="update-form" style="display: flex;flex-direction: column;justify-content: center;align-items: center;">
 
             <input type="text" name="header" id="" style="width: 25rem;padding: 1rem;margin: 1rem;" value="{{note['header']}}">
