--- a/templates/layout1.html
+++ b/templates/layout1.html
@@ -14,7 +14,7 @@
 -->
    
 </head>
-<body>
+<body >
     <div id="loader-wrapper">
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
@@ -46,12 +46,12 @@
                             <a class="nav-link nav-link-2" href="/logout">Log Out</a>
                         </li>
                     {%else%}
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-2" href="/login">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-2" href="/registeruser">Sign Up</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-2" href="/login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-2" href="/registeruser">Sign Up</a>
+                        </li>
                     {%endif%}
 
                 </ul>
@@ -66,9 +66,10 @@
                 </button>
             </form>-->
         </div>
-        {%block content%}
-        {%endblock%}
-
+        <div style="overflow-y: scroll; height:700px;">
+            {%block content%}
+            {%endblock%}
+        </div>
 
 
         <script src='{{url_for("static",filename="js/plugins.js")}}'></script>
